--- a/tests/integration-tests/configs/ad_integration.yaml
+++ b/tests/integration-tests/configs/ad_integration.yaml
@@ -5,6 +5,6 @@ test-suites:
     test_ad_integration.py::test_ad_integration:
       dimensions:
         - regions: ["us-east-1"]
-          instances: ["c5n.18xlarge"]
+          instances: {{ common.INSTANCES_DEFAULT_X86 }}
           oss: ["alinux2", "ubuntu2004"]
           schedulers: ["slurm"]
