--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -2,7 +2,7 @@ ad_integration:
   test_ad_integration.py::test_ad_integration:
     dimensions:
       - regions: ["us-east-1"]
-        instances: ["c5n.18xlarge"]
+        instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: {{ common.OSS_COMMERCIAL_X86 }}
         schedulers: ["slurm"]
 arm_pl:
