Add security group ingress if custom security groups are used
If custom security groups are provided in the cluster configuration to some queues and/or the head node, but not to all of the cluster nodes, the pcluster created security groups will allow inbound connections from the custom security groups.

Before this change, the mixture of managed and custom security groups led to cluster nodes not accessible to each other. Specifically, nodes in custom security groups cannot access nodes in managed security groups.

With this change, we ensure managed security groups allows access from nodes in custom security groups. However, if the custom security groups are not properly configured, there will still be connection issues among cluster nodes.

Mixing managed security groups and custom security groups is not common. So a warning is added.

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/tests/integration-tests/tests/networking/test_security_groups/test_overwrite_sg/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/networking/test_security_groups/test_overwrite_sg/pcluster.config.update.yaml
@@ -4,8 +4,6 @@ HeadNode:
   InstanceType: {{ instance }}
   Networking:
     SubnetId: {{ public_subnet_id }}
-    SecurityGroups:
-      - {{ vpc_security_group_id }}
   Ssh:
     KeyName: {{ key_name }}
   Imds:
@@ -29,6 +27,8 @@ Scheduling:
           - {{ private_additional_cidr_subnet_id }}
         SecurityGroups:
           - {{ vpc_security_group_id }}
+          # Compute nodes use custom sg while the head node is using managed id
+          # to test the managed sg allow access from the custom sg
 SharedStorage:
   - MountDir: efs
     Name: efs
