--- a/cli/src/pcluster/resources/imagebuilder/parallelcluster_test.yaml
+++ b/cli/src/pcluster/resources/imagebuilder/parallelcluster_test.yaml
@@ -76,9 +76,8 @@ phases:
           commands:
             - |
               set -v
-              PATTERN=$(grep -F "default['cluster']['base_dir']" {{ CookbookDefaultFile }})
-              BASE_DIR=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
-              PYENV_ROOT+="${BASE_DIR}/pyenv"
+              PATTERN=$(grep -F "default['cluster']['system_pyenv_root']" {{ CookbookDefaultFile }})
+              PYENV_ROOT=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
               echo ${PYENV_ROOT}
 
       - name: SchedulerPluginPyenvRoot
@@ -87,9 +86,8 @@ phases:
           commands:
             - |
               set -v
-              PATTERN=$(grep -F "default['cluster']['scheduler_plugin']['home']" {{ CookbookDefaultFile }})
-              BASE_DIR=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
-              PYENV_ROOT+="${BASE_DIR}/.pyenv"
+              PATTERN=$(grep -F "default['cluster']['scheduler_plugin']['pyenv_root']" {{ CookbookDefaultFile }})
+              PYENV_ROOT=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
               echo ${PYENV_ROOT}
 
       - name: CookbookVirtualenvPath
