--- a/cli/requirements.txt
+++ b/cli/requirements.txt
@@ -1,7 +1,7 @@
 boto3>=1.16.14
 tabulate~=0.8
-PyYAML>=5.3.1
-jinja2>=2.11.0
+PyYAML~=5.3
+jinja2~=3.0
 marshmallow~=3.10
 aws-cdk.core~=1.137
 aws-cdk.aws-batch~=1.137
@@ -21,12 +21,6 @@ aws-cdk.aws-ssm~=1.137
 aws-cdk.aws-sqs~=1.137
 aws-cdk.aws-cloudformation~=1.137
 werkzeug~=2.0
-connexion==2.7
-clickclick>=1.2,<21
-jsonschema>=2.5.1,<4
-requests>=2.9.1,<3
-inflection>=0.3.1,<0.6
-openapi-spec-validator>=0.2.4,<0.4
+connexion==2.10.0
 flask~=2.0
 jmespath~=0.10
-jinja2~=3.0.2
