--- a/tests/iam_policies/cluster-roles.cfn.yaml
+++ b/tests/iam_policies/cluster-roles.cfn.yaml
@@ -102,12 +102,17 @@ Resources:
               - Action:
                   - ec2:DescribeInstances
                   - ec2:DescribeInstanceStatus
-                  - ec2:CreateTags
                   - ec2:DescribeVolumes
-                  - ec2:AttachVolume
                   - ec2:DescribeInstanceAttribute
                 Effect: Allow
                 Resource: '*'
+              - Action:
+                  - ec2:CreateTags
+                  - ec2:AttachVolume
+                Effect: Allow
+                Resource:
+                  - !Sub arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:instance/*
+                  - !Sub arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:volume/*
               - Action:
                   - cloudformation:DescribeStackResource
                   - cloudformation:SignalResource
@@ -265,12 +270,17 @@ Resources:
               - Action:
                   - ec2:DescribeInstances
                   - ec2:DescribeInstanceStatus
-                  - ec2:CreateTags
                   - ec2:DescribeVolumes
-                  - ec2:AttachVolume
                   - ec2:DescribeInstanceAttribute
                 Effect: Allow
                 Resource: '*'
+              - Action:
+                  - ec2:CreateTags
+                  - ec2:AttachVolume
+                Effect: Allow
+                Resource:
+                  - !Sub arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:instance/*
+                  - !Sub arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:volume/*
               - Action:
                   - cloudformation:DescribeStackResource
                   - cloudformation:DescribeStacks
