Fix Tags in number interpret as integer
Signed-off-by: chenwany <chenwany@amazon.com>

--- a/cloudformation/compute-fleet-hit-substack.cfn.yaml
+++ b/cloudformation/compute-fleet-hit-substack.cfn.yaml
@@ -201,8 +201,8 @@ Resources:
               - Key: aws-parallelcluster-node-type
                 Value: Compute
     {%- for tag in tags %}
-              - Key: {{ tag.Key }}
-                Value: {{ tag.Value }}
+              - Key: '{{ tag.Key }}'
+                Value: '{{ tag.Value }}'
     {%- endfor %}
           - ResourceType: volume
             Tags:
@@ -219,8 +219,8 @@ Resources:
               - Key: aws-parallelcluster-node-type
                 Value: Compute
     {%- for tag in tags %}
-              - Key: {{ tag.Key }}
-                Value: {{ tag.Value }}
+              - Key: '{{ tag.Key }}'
+                Value: '{{ tag.Value }}'
     {%- endfor %}
         BlockDeviceMappings:
           - DeviceName: /dev/xvdba
