--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -17,7 +17,11 @@ scheduler_plugin:
     dimensions:
       - regions: ["ca-central-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2", "centos7", "ubuntu2004"]
+        oss: {{ common.OSS_COMMERCIAL_X86 }}
+        schedulers: ["plugin"]
+      - regions: ["ap-northeast-1"]
+        instances: {{ common.INSTANCES_DEFAULT_ARM }}
+        oss: {{ common.OSS_COMMERCIAL_ARM }}
         schedulers: ["plugin"]
 cfn-init:
   test_cfn_init.py::test_replace_compute_on_failure:
