Fix bug in shared mount directory list
The list should only contain directories from shared storage. There is another property `local_mount_dir_set` to collect the set of local mount directories.

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/cli/tests/pcluster/validators/test_all_validators/test_validators_are_called_with_correct_argument/slurm.yaml
+++ b/cli/tests/pcluster/validators/test_all_validators/test_validators_are_called_with_correct_argument/slurm.yaml
@@ -7,6 +7,9 @@ HeadNode:
     SubnetId: subnet-12345678
   Ssh:
     KeyName: ec2-key-name
+  LocalStorage:
+    EphemeralVolume:
+      MountDir: /scratch_head
 Scheduling:
   Scheduler: slurm
   SlurmQueues:
